compiler/tests/compiler/must_fail/t_07.rs.exp.err
tests/compiler/must_fail/t_07.rs:1:25: 1:36 error: variable name missing
fn foo(x: stack! (b64), stack! (b64)) {
                        ^^^^^^^^^^^^
